Sun Apr 24 21:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Fixed undefining to actually work.

	* The top distribution now takes precedence on defined
	  distdefs over inherited distributions, and can override
	  defined and undefined distdefs (previously it could only
	  undefine defined but not define specificly undefined :)).

	* Prettier distdef output with -s.

Sat Apr 23 12:49:09 EEST 2005 Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.1.

	* Fixed 'noprocess' sed script.

Fri Apr 22 20:23:06 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.2.

	* Various 'cat' optimizations.

	* More test cases in tests/.

	* No Autodist header for "other" '.ad' files as we don't know 
	  what the file contains.

	* No non-source distdef format processing for source files
	  anymore.

Tue Apr 19 17:12:09 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Remove extra ' ' and '\t' when joining backslashed lines.

	* Fixed argument delivery to hook scripts.

Mon Apr 18 21:05:42 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Process '*.ad' files before calling autoconf and automake.

	* Various shell compatibility kludges added.

Mon Apr 18 20:06:24 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Autodist 1.1.

	* All 'local' variables must be at the start of function for
	  compatibility.

Sun Apr 17 20:08:28 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* Added TODO.

	* Added pre-process-dist-hook and post-process-dist-hook.

	* Added autodist.1.

Sun Apr 16 23:00:02 EEST 2005  Pekka Riikonen <priikone@silcnet.org>

	* First release, Autodist 1.0.