@@ -1,3 +1,8 @@
+Thu Apr 28 11:44:59 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
+
+	* The '.in' suffix with source file suffixes expects source code 
+	  format for the distdefs.
+
 Sun Apr 24 21:11:49 EEST 2005 Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed undefining to actually work.
